// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.itmo";
option java_outer_classname = "HdrStreamingProto";
option objc_class_prefix = "HLWS";

// package scene;
package manualflowcontrol;

// The greeting service definition.
service StreamingHdr {
  // Streams a many greetings
  rpc SayHdrStreaming (stream SceneRequest) returns (stream HdrReply) {}
}

// The request message containing camera and scene JSON
message SceneRequest {
  string scene = 1;
  string camera = 2;
}

// The response message containing HDR file 
message HdrReply {
  bytes image = 1;
}

